# FriendsForMatibiApp

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
main/: db.sqlite3  settings.py  urls.py
main/main/: settings.py
main/matibi/: apps.py  models.py  urls.py  views.py
main/templates/: index.html  news.html  news_details.html  nookhub_details.html
matibi/: admin.py  models.py  urls.py  views.py
matibi/migrations/: 0001_initial.py  0002_alter_newsarticles_image_alter_nookhubarticles_image.py  0003_newsarticlepage_delete_newsarticles.py
templates/: about.html  base.html  completedprojects.html  index.html  nookhub.html  projectstofund.html  runningprojects.html  sitebase.html
